# pytorch-1

./: README.md  install_pytorch
aten/src/ATen/: Tensor.h  TensorIterator.cpp  TensorIterator.h  TensorMeta.h  Utils.cpp  Utils.h
aten/src/ATen/native/: AdaptiveAveragePooling.cpp  Convolution.cpp  DilatedMaxPool2d.cpp  Linear.cpp  LinearAlgebra.cpp  MetaTensor.cpp  Normalization.cpp  Pooling.cpp  ReduceOps.cpp  TensorFactories.cpp  native_functions.yaml
aten/src/ATen/test/hip/: MaybeOwned_test.cpp  extension_backend_test.cpp  hip_atomic_ops_test.hip  ivalue_test.cpp  (+14 more)
aten/src/THH/: CMakeLists.txt  THH.h  THHGeneral.hpp  THHSleep.hip  THHStorage.cpp  THHStorage.h  THHStorage.hip  THHTensor.cpp  THHTensor.h  THHTensor.hpp
aten/src/THH/generic/: THHStorage.cpp  THHStorage.h  THHStorage.hip  THHTensor.cpp  THHTensor.h
c10/core/: Allocator.h  CPUAllocator.cpp  CPUAllocator.h
c10/hip/: HIPCachingAllocator.cpp  HIPFunctions.h  HIPGraphsC10Utils.h  HIPStream.cpp
hookup_scripts/: a.py  multi_resnet.py  resnet.py  run  single_resnet.py
hookup_scripts/models/: a.py  build.sh  pytorchLog  resnet.py  run.sh
modules/detectron/hip/: group_spatial_softmax_op.hip  ps_roi_pool_op.hip  roi_pool_f_op.hip  select_smooth_l1_loss_op.hip  sigmoid_cross_entropy_loss_op.hip  sigmoid_focal_loss_op.hip  smooth_l1_loss_op.hip  softmax_focal_loss_op.hip  spatial_narrow_as_op.hip  upsample_nearest_op.hip
tools/autograd/templates/: python_variable_methods.cpp
tools/codegen/dest/: register_dispatch_key.py
torch/nn/: functional.py
torch/nn/modules/: batchnorm.py  conv.py  linear.py
